--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 
 		<tr>
 		 <td>Naelad</td>
-		 <td></td>
+		 <td id="poundOutput"></td>
 		</tr>
 
 		<tr>
 		 <td>Untsid</td>
-		 <td></td>
+		 <td id="ozOutput"></td>
 		</tr>
 	</table>
 	<script src ="main.js"></script>
