--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Praks 7</title>
 </head>
 <body>
+	<div class="container">
 	<h1>Kaalu teisendamine</h1>
 	<form action="">
 		<input type="number" placeholder="Sisesta kaal kilogrammides..." id="kgInput"
@@ -28,6 +29,7 @@
 		 <td id="ozOutput"></td>
 		</tr>
 	</table>
+	</div>
 	<script src ="main.js"></script>
 </body>
 </html>
